backend/src/inbound/http/users/tests/snapshots/backend__inbound__http__users__tests__cursor_error_tests__list_users_unsupported_direction_error_envelope.snap
---
source: backend/src/inbound/http/users/tests/cursor_error_tests.rs
assertion_line: 62
expression: value
---
{
  "code": "invalid_request",
  "details": {
    "code": "unsupported_direction",
    "field": "cursor"
  },
  "message": "cursor direction is unsupported"
}
